Isabelle NEWS -- history user-relevant changes
==============================================

New in this Isabelle version
----------------------------

*** Pure ***

* Code generator: details of internal data cache have no impact on
the user space functionality any longer.


*** HOL ***

* Various old-style primrec specifications in the HOL theories have been
replaced by new-style primrec, especially in theory List.  The corresponding
constants now have authentic syntax.  INCOMPATIBILITY.

* Reorganized theory Multiset.thy: less duplication, less historical
organization of sections, conversion from associations lists to
multisets, rudimentary code generation.  Use insert_DiffM2 [symmetric]
instead of elem_imp_eq_diff_union, if needed.  INCOMPATIBILITY.

* Reorganized theory Sum_Type.thy; Inl and Inr now have
authentic syntax.  INCOMPATIBILITY.

* Code generation: ML and OCaml code is decorated with signatures.

* Complete_Lattice.thy: lemmas top_def and bot_def have been replaced
by the more convenient lemmas Inf_empty and Sup_empty.  Dropped lemmas
Inf_insert_simp and Sup_insert_simp, which are subsumed by Inf_insert
and Sup_insert.  Lemmas Inf_UNIV and Sup_UNIV replace former Inf_Univ
and Sup_Univ.  Lemmas inf_top_right and sup_bot_right subsume inf_top
and sup_bot respectively.  INCOMPATIBILITY.

* Finite_Set.thy and List.thy: some lemmas have been generalized from
sets to lattices:

  fun_left_comm_idem_inter      ~> fun_left_comm_idem_inf
  fun_left_comm_idem_union      ~> fun_left_comm_idem_sup
  inter_Inter_fold_inter        ~> inf_Inf_fold_inf
  union_Union_fold_union        ~> sup_Sup_fold_sup
  Inter_fold_inter              ~> Inf_fold_inf
  Union_fold_union              ~> Sup_fold_sup
  inter_INTER_fold_inter        ~> inf_INFI_fold_inf
  union_UNION_fold_union        ~> sup_SUPR_fold_sup
  INTER_fold_inter              ~> INFI_fold_inf
  UNION_fold_union              ~> SUPR_fold_sup

* Added transpose to List.thy.

*** ML ***
